--- a/package.json
+++ b/package.json
@@ -30,7 +30,6 @@
     "hexo-server": "^1.0.0",
     "lunr": "github:mamboer/lunr.js",
     "markdown-it-abbr": "^1.0.4",
-    "markdown-it-checkbox": "^1.1.0",
     "markdown-it-container": "^2.0.0",
     "markdown-it-deflist": "^2.0.3",
     "markdown-it-emoji": "^1.4.0",
@@ -41,6 +40,7 @@
     "markdown-it-regexp": "^0.4.0",
     "markdown-it-sub": "^1.0.0",
     "markdown-it-sup": "^1.0.0",
+    "markdown-it-task-checkbox": "^1.0.6",
     "moment": "^2.25.3",
     "node-sass": "^4.14.1",
     "object-assign": "^4.1.1"
