--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "hexo": "^4.0.0",
+    "hexo-asset-image": "^1.0.0",
     "hexo-assets": "0.0.1",
     "hexo-autoprefixer": "^2.0.0",
     "hexo-deployer-git": "^2.1.0",
